<resources>
    <string name="app_name">EduUp</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait…</string>
    <string name="uploading">Uploading…</string>
    <string name="saving">Saving…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="discussions">Discussions</string>
    <string name="downloads">Downloads</string>
    <string name="image">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID*</string>
    <string name="et_hint_password">Password*</string>
    <string name="lbl_forgot_password"><u>Forgot Password?</u></string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account yet</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="btn_lbl_register">Register</string>
    <string name="hint_first_names">First Names*</string>
    <string name="hint_family_name">Family Name*</string>
    <string name="hint_confirm_password">Confirm Password*</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u>Terms &amp; Condition</u></string>
    <string name="login"><u>Login</u></string>
    <string name="et_hint_school">Institute/school</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_title_description">Enter your e-mail address</string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_family_name">Please enter family name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please confirm your password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Entered passwords do not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and conditions to continue using this application.</string>
    <string name="registering_successful">Thank you for registering!</string>
    <string name="action_logout">Logout</string>
    <string name="nav_user_email">user@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_user_name">Username</string>
    <string name="email_sent_success">Check your email for link to reset your password!</string>
    <string name="title_complete_profile">PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number</string>
    <string name="err_msg_enter_school">Please enter School/Institute</string>
    <string name="msg_profile_update_success">Your profile has been successfully updated</string>
    <string name="read_store_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_select_level">Please select your  school level</string>
    <string name="clientId">727341459393-g4jom5cu36hs1l39itsp25gc23cve800.apps.googleusercontent.com</string>
    <string name="pdf_name">File name</string>
    <string name="upload_file"><u>Upload File</u></string>
    <string name="save">Save</string>
    <string name="noteDescription">Note Description</string>
    <string name="noteTitle">Note Title</string>
    <string name="noteBody">Note text</string>
    <string name="create_new_note">Create New Note</string>
    <string name="noteSubject">Subject</string>
    <string name="action_znotes">znotes</string>
    <string name="action_share">share</string>
    <string name="action_upload">upload</string>
    <string name="upload_note">Upload Notes</string>
    <string name="upload_notice">Note Everything uploaded here is made public and can be viewed and used by everyone using EduUp</string>
    <string name="search_notes">Search notes</string>
    <string name="view_note">View Note</string>
    <string name="download_file">Download File</string>
    <string name="download">Download</string>
    <string name="uploaded">"Uploaded : "</string>
    <string name="dateSample">28/11/2021</string>
    <string name="rate_note"><u>Rate note</u></string>
    <string name="bookmarks">Bookmarks</string>
    <string name="additionComments">additional comments</string>
    <string name="reviews">Reviews</string>
    <string name="noteUserComment">Note users comments</string>
    <string name="numComments">(0)</string>
    <string name="yourComment">Your Review</string>
    <string name="edit_review"><u>edit your review</u></string>
    <string name="action_chat">Discussions</string>
    <string name="people">People</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="action_settings">Settings</string>
    <string name="program">Program</string>
    <string name="stream">Stream</string>
    <string name="msg_profile_updating">Updating your profile details</string>
    <string name="history">History</string>
    <string name="group_name">Group name</string>
    <string name="add_group_image"><u>Add group image</u></string>
    <string name="search_people">Search People</string>
    <string name="browse">Browse</string>
    <string name="add_note">addNote</string>
    <string name="practice">Practice exam type Questions</string>
    <string name="get_online_note">Find new content everyday</string>
    <string name="join_group">Join a Discution Group</string>
    <string name="start_new_discussion">start new discussion</string>
    <string name="you_have_not_downloaded_anything_yet">You haven\'t downloaded anything yet</string>
    <string name="you_have_not_viewed_anything_yet">You haven\'t viewed anything yet</string>
    <string name="share_with_others">Share your notes with others</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="practice_exam_questions">Practice Exam Questions</string>
    <string name="password_must_be">Password must be 8 characters minimum container at least one capital letter, one number and one symbol</string>
    <string name="name_must_be_3_characters">Name should be at least 3 characters</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="i_agree_to_the">I Agree To The</string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="enter_valid_phone_number">Please enter a valid phone number</string>
    <string name="enter_program">Please enter your program</string>
    <string name="enter_school">Enter your School/Institute</string>
    <string name="hint_nick_name">Nickname</string>
    <string name="err_nick_name_too_short">Nickname too short</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="view_photo">View Photo</string>
    <string name="btn_save_image">Save photo</string>
    <string name="btn_set_image">Set Image</string>
    <string name="you_have_not_bookmarked_anything_yet">You haven\'t bookmarked anything yet</string>
    <string name="note_saved">Note saved</string>
    <string name="created_on">"Created: "</string>
    <string name="action_notify_continue_studying">com.nema.eduup.action.CONTINUE_STUDYING</string>
    <string name="action_studied">com.nema.eduup.action.STUDIED</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="opened">Opened</string>
    <string name="type">Type</string>
    <string name="study">Study</string>
    <string name="share">Share</string>
    <string name="other">Other</string>
    <string name="description">Reminder Description</string>
    <string name="time">Time</string>
    <string name="select_time">SELECT A TIME</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="note">Additional notes</string>
    <string name="action_delete_reminder">Delete Reminder</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="name_required">Name is a required field.</string>
    <string name="desc_required">Description is required.</string>
    <string name="type_required">Type is a required field</string>
    <string name="days_required">You must choose at least one day.</string>
    <string name="time_required">Time is a required field</string>
    <string name="save_failed">Reminder not created. Try again.</string>
    <string name="update_failed">Reminder could not be updated.</string>
    <string name="delete_failed">Reminder could not be deleted.</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="cant_administer_medicine">Can\'t administer medicine at this time.</string>
    <string name="title">Title</string>
    <string name="add_personal_note">Add personal note</string>
    <string name="make_some_notes_and_see_them_here">make some notes and see them here</string>
    <string name="start_or_join_discussion">Start or Join discussion</string>
    <string name="you_do_not_have_active_discussions_yet">You do not have active discussions yet</string>
    <string name="group_notification_for">This is the %s notification group.</string>
    <string name="some_text" formatted="true">
    Use for String.format method. Parameter one: %s1
    </string>
    <string name="pdf_generation_failed">Failed to generate pdf</string>
    <string name="start_when_you_are_ready">Start when you are ready</string>
    <string name="start">START</string>
    <string name="upload_quiz">Upload Quiz</string>
    <string name="quiz_title">Quiz title</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="quiz_time_in_minutes">Quiz time</string>
    <string name="quiz_time">Quiz duration</string>
    <string name="add_question">Add Question</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="correct_option">Correct option :</string>
    <string name="err_msg_quiz_no_qns">A quiz can not have 0 questions</string>
    <string name="enter_duration">\"Duration must be a number, minutes\"</string>
    <string name="personal_note">Personal Note</string>
    <string name="reminder_title">Reminder title</string>
    <string name="study_reminder">Study reminder</string>
    <string name="share_reminder">Share reminder</string>
    <string name="action_upload_quiz">Upload quiz</string>
    <string name="quiz_saved">Thank you for uploading the quiz</string>
    <string name="open_note_to_share">Open a note to share</string>
    <string name="choose_theme_text">Choose theme</string>
    <string name="app_settings">App Settings</string>
</resources>