<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/discussions_nav_graph"
    app:startDestination="@id/fragmentDashboard">

    <fragment
        android:id="@+id/fragmentHome"
        android:name="com.nema.eduup.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/fragmentDashboard"
        android:name="com.nema.eduup.fragments.DashboardFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/fragmentBrowse"
        android:name="com.nema.eduup.fragments.BrowseFragment"
        android:label="@string/browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/fragmentDownloads"
        android:name="com.nema.eduup.fragments.DownloadsFragment"
        android:label="@string/downloads"
        tools:layout="@layout/fragment_downloads" />

    <fragment
        android:id="@+id/fragmentDiscussions"
        android:name="com.nema.eduup.fragments.DiscussionsFragment"
        android:label="@string/discussions"
        tools:layout="@layout/fragment_discussions" />

    <fragment
        android:id="@+id/fragmentProfile"
        android:name="com.nema.eduup.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/fragmentPeople"
        android:name="com.nema.eduup.fragments.PeopleFragment"
        android:label="@string/people"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/fragmentBookmarks"
        android:name="com.nema.eduup.fragments.BookmarksFragment"
        android:label="@string/bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/fragmentHistory"
        android:name="com.nema.eduup.fragments.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

</navigation>
