<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarReminder"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimaryVariant"
            app:navigationIcon="@drawable/ic_close_black_24"
            app:navigationIconTint="@color/white"
            app:title="@string/create_reminder">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="8dp"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true"
        android:scrollbarStyle="outsideInset"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarReminder">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="64dp"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:focusable="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_title"
                app:errorTextColor="@color/text_black_color"
                android:textColorHint="@color/text_hint_color"
                app:boxStrokeColor="@color/text_black_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/checkBoxAdministered"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLength="40"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBoxAdministered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/opened"
                android:textColor="@color/text_black_color"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toRightOf="@+id/textInputLayoutName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTypeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/type"
                android:textSize="14sp"
                android:textColor="@color/text_hint_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName" />

            <RadioGroup
                android:id="@+id/radioGroupType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTypeLabel">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonDog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/study_reminder"
                    android:textColor="@color/text_black_color"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonCat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share_reminder"
                    android:textColor="@color/text_black_color"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonOther"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/other"
                    android:textColor="@color/text_black_color"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/text_black_color"
                android:textColorHint="@color/text_hint_color"
                android:textColor="@color/text_black_color"
                android:hint="@string/description"
                app:boxStrokeColor="@color/text_black_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="150"
                    android:maxLines="3"
                    android:minLines="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewTimeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/time"
                android:textColor="@color/text_hint_color"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescription" />

            <Button
                android:id="@+id/buttonTime"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/select_time"
                android:textColor="@color/text_black_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTimeLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:visibility="invisible"
                android:id="@+id/textInputLayoutNote"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/text_black_color"
                android:textColorHint="@color/text_hint_color"
                app:boxStrokeColor="@color/text_black_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonTime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:inputType="textMultiLine"
                    android:maxLength="150"
                    android:maxLines="3"
                    android:minLines="2" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"

        app:tint="@color/white"
        app:srcCompat="@drawable/ic_check_black_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>